# aizo_projects

./: CMakeLists.txt  Makefile  README.md  res.txt
inc/: sorts.h  times.h  utils.h
report/: res.txt  sprawko_projekt_1.odt
src/: main.c  sorts.c
tools/: gen_plots.py
